Fix nono_zones being 4px too tall (#134)

--- a/src/extension-view/component.sass
+++ b/src/extension-view/component.sass
@@ -9,24 +9,26 @@
   z-index: 1;
   top: 0;
   left: 0;
-  width: 99.5%;
+  width: 100%;
   height: 100px;
   content: "";
   opacity: 0.6;
   background-color: #6441a4;
   border: 2px solid #b19dd8;
+  box-sizing: border-box;
 
 .nono_zone:after
   position: absolute;
   z-index: 1;
   bottom: 0;
   right: 0;
-  width: 99.5%;
+  width: 100%;
   height: 80px;
   content: "";
   opacity: 0.6;
   background-color: #6441a4;
   border: 2px solid #b19dd8;
+  box-sizing: border-box;
 
 .component-view
   background-color: #322F37
